--- a/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
+++ b/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
@@ -12,6 +12,7 @@ body {
 	font-weight: 400;
 	-webkit-font-smoothing: antialiased;
 	background: rgb(237, 233, 217);
+	/*background:#F0E8CB;*/
 }
 
 header, footer, nav, section, div {
@@ -58,15 +59,15 @@ header, footer, nav, section, div {
 
 	#lobbyNavContainer a {
 		text-decoration: none;
-		color: gray;
+		color: black;
 	}
 
 		#lobbyNavContainer a:visited {
-			color: gray;
+			color: black;
 		}
 
 		#lobbyNavContainer a:active {
-			color: gray;
+			color: black;
 		}
 
 .lobby-nav-link-container {
@@ -143,11 +144,8 @@ header, footer, nav, section, div {
 }
 
 #clockCanvas {
-	height: 200px;
-	position: relative;
-	width: 200px;
-	margin-top: -150px;
-	right: 15px;
+	position: absolute;
+	top: 70px;
 }
 
 #digitalClock {
@@ -267,15 +265,14 @@ header, footer, nav, section, div {
 	padding: 5px;
 	padding-left: 20px;
 	background: #D7D0B8;
-	color: rgb(255, 251, 239);
 	border-bottom: 2px solid rgb(177, 177, 119);
 	font-size: 1.4em;
 }
 
 .display-events-overview-container {
-	background: rgb(253, 252, 248);
-	display: none;
+	background: rgb(253, 252, 250);
 	text-align: left;
+	margin-top: 50px;
 }
 
 	.display-events-overview-container .legend-container {
@@ -310,7 +307,7 @@ header, footer, nav, section, div {
 		color: #555653;
 		padding: 4px 0;
 		font-size: 2em;
-		border-bottom:2px solid #DEDEDE;
+		border-bottom: 2px solid #DEDEDE;
 	}
 
 	.display-events-overview-container .list-item-title {
@@ -321,7 +318,7 @@ header, footer, nav, section, div {
 		vertical-align: top;
 		color: rgb(147, 139, 114);
 		text-align: left;
-		font-size:1.4em;
+		font-size: 1.4em;
 	}
 
 	.display-events-overview-container .list-item-other {
@@ -330,7 +327,7 @@ header, footer, nav, section, div {
 		padding: 5px;
 		width: 130px;
 		text-align: left;
-		font-size:1.4em;
+		font-size: 1.4em;
 	}
 
 
@@ -473,6 +470,10 @@ header, footer, nav, section, div {
 	overflow: hidden;
 }
 
+.current-weekday {
+	color: black;
+}
+
 .current-month-cell .cell-span-container {
 	position: relative;
 	top: 56px;
@@ -514,7 +515,10 @@ header, footer, nav, section, div {
 		padding-left: 20px !important;
 	}
 
-
+.events-menu-container {
+	display: inline-block;
+	vertical-align: top;
+}
 
 .calendar-row {
 	/*
@@ -543,6 +547,7 @@ header, footer, nav, section, div {
 	padding-top: 20px;
 	border-left: 3px solid rgb(215, 208, 184);
 	padding-bottom: 40px;
+	overflow:hidden;
 }
 
 .login-bar-container {
@@ -562,8 +567,10 @@ header, footer, nav, section, div {
 }
 
 .today-cell {
-	background: #EDE9D9 !important;
-	border: 2px solid rgb(199, 192, 174) !important;
+	/*background: #EDE9D9 !important;
+	border: 2px solid rgb(199, 192, 174) !important;*/
+	background: #FFFFFF !important;
+	border: 2px solid rgb(188, 188, 188) !important;
 }
 
 	.today-cell .event-rectangle {
@@ -749,6 +756,7 @@ header, footer, nav, section, div {
 
 .list-item-star {
 	display: inline-block;
+	width:30px;
 }
 
 	.list-item-star img {
@@ -758,8 +766,30 @@ header, footer, nav, section, div {
 
 #detailsPageAllEventsListContainer {
 	margin-left: 1.8%;
-	margin-right: 10%;
-	margin-top: 50px;
+}
+
+.display-events-header-menu-title.selected {
+	color: rgb(255, 251, 239);
+	padding: 10px;
+	border-top: 4px solid #D7D0B8;
+}
+
+.display-events-header-menu-title {
+	border-top: 4px solid #A7A292;
+	padding:10px;
+}
+
+.display-events-overview-header {
+	color: #928C77;
+	border-top:1px solid #EDE9D9;
+
+}
+
+.dziennik-menu-container {
+	clear: right;
+	float: right;
+	text-align: right;
+	margin-top: 30px;
 }
 
 #lobbyPageAllEventsListContainer {
@@ -773,7 +803,7 @@ header, footer, nav, section, div {
 }
 
 .display-events-overview-item .event-block-container {
-width:40%;
+	width: 40%;
 }
 
 #addNewEventContainer {
@@ -1005,8 +1035,7 @@ background:rgb(115, 233, 162);
 	margin-left: 150px;
 }
 
-.current-
- {
+.current- {
 	color: #918D80;
 	font-size: 2em;
 }
@@ -1051,7 +1080,7 @@ background:rgb(115, 233, 162);
 
 .year-name-container {
 	letter-spacing: 1px;
-	color: rgb(148, 138, 111);
+	color: black;
 	display: inline-block;
 	padding-bottom: 4px;
 	padding-left: 14px;
@@ -1199,8 +1228,8 @@ background:rgb(115, 233, 162);
 #todayDateAndTimeContainer {
 	color: rgb(252, 255, 230);
 	margin-left: 20px;
-	width: 200px;
-	float: left;
+	width: 270px;
+	display: inline-block;
 	position: relative;
 	height: 100px;
 	font-family: Raleway-Regular;
@@ -1225,7 +1254,7 @@ background:rgb(115, 233, 162);
 	vertical-align: baseline;
 	position: relative;
 	top: 2px;
-	color: rgb(205, 198, 180);
+	color: rgb(126, 126, 126);
 }
 
 .event-kind-text {
@@ -1328,8 +1357,8 @@ background:rgb(115, 233, 162);
 
 .close-btn-x {
 	float: right;
-	/*color: rgb(223, 215, 188);*/
 	padding: 0 10px;
+	color:rgb(255, 251, 239);
 }
 
 #calendarDayDetailsTable {
@@ -1344,10 +1373,10 @@ background:rgb(115, 233, 162);
 		text-align: left;
 		color: rgb(226, 219, 203);
 		padding: 10px;
-		padding-left:6px;
+		padding-left: 6px;
 		font-size: 18px;
-		border:2px solid #484848;
-		background:#6C665B;
+		border: 2px solid #484848;
+		background: #6C665B;
 	}
 
 		#calendarDayDetailsTable .table-details-head div {
@@ -1395,7 +1424,7 @@ background:rgb(115, 233, 162);
 }
 
 .current-month-name-calendar {
-	color: #918D80;
+	color: black;
 	font-size: 2em;
 }
 
@@ -1742,7 +1771,7 @@ legend {
 	line-height: 1;
 	background: #D7D0B8;
 	box-shadow: rgb(169, 162, 139) 2px 2px 10px -1px inset;
-	border: 2px solid rgb(189, 180, 153);
+	/*border: 2px solid rgb(189, 180, 153);*/
 }
 
 .event-block-info-body {
@@ -1882,7 +1911,7 @@ legend {
 }
 
 .today-day-header-calendar {
-	color: #918D80;
+	color: black;
 	display: inline-block;
 	font-size: 2.2em;
 	letter-spacing: 1px;
@@ -1915,12 +1944,12 @@ legend {
 
 .details-event-block-info-time {
 	padding: 6px;
-    font-size: 2em;
-    color: white;
-    position: relative;
-    right: 22px;
-    display: inline-block;
-    background: #979486;
+	font-size: 2em;
+	color: white;
+	position: relative;
+	right: 22px;
+	display: inline-block;
+	background: #979486;
 }
 
 .event-block-info-date {
@@ -1979,7 +2008,7 @@ legend {
 .details-event-block-info-address {
 	font-size: 1.2em;
 	color: rgb(132, 126, 114);
-	padding:10px;
+	padding: 10px;
 }
 
 .event-block-info-link {
