--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_DetailsEventInfo.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_DetailsEventInfo.cshtml
@@ -50,7 +50,7 @@
 				<div data-bind="if: $root.userName.toUpperCase() == addedBy.toUpperCase()">
 					<div style="text-align: right; font-size: 18px;">
 						<div style="display: inline-block;" class="link details-edit-event-link" data-bind="click: function () { $root.editEventDetailsPageOnEditLinkClick( id, startDate.year, startDate.month, startDate.day ) }"><span>edytuj</span></div>
-						<div style="display: inline-block; color: rgb(175, 167, 167);" class="link details-delete-event-link" data-bind="click: function () { $root.prepareDeleteEventDetailsPageOnDeleteLinkClick( id, startDate.year, startDate.month, startDate.day ) }"><span>usuń</span></div>
+						<div style="display: inline-block; color: rgb(175, 167, 167);" class="link details-delete-event-link" data-bind="click: function () { $root.prepareDeleteEventDetailsPageOnDeleteLinkClick( id, startDate.year, startDate.month, startDate.day, privacyLevel.name ) }"><span>usuń</span></div>
 					</div>
 				</div>
 			</div>
