--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/Index.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/Index.cshtml
@@ -73,7 +73,6 @@
 <script src="~/Scripts/CalendarWidget/Slider/jquery.easing.1.3.js"></script>
 <script src="~/Scripts/CalendarWidget/Slider/jquery.superslides.min.js"></script>
 
-
 <script src="~/Scripts/JSModels/KKEventModel.js"></script>
 <script src="~/Scripts/JSModels/KKEventModelObservable.js"></script>
 <script src="~/Scripts/JSModels/KKNoteModel.js"></script>
@@ -83,11 +82,11 @@
 <script src="~/Scripts/JSModels/KKEventDateModelObservable.js"></script>
 <script src="~/Scripts/JSViewModels/AppViewModel.js"></script>
 
-<script src="~/Scripts/Helpers/EventColorHelper.js"></script>
-<script src="~/Scripts/Helpers/TreeBuilder.js"></script>
-<script src="~/Scripts/Helpers/WebApiCaller.js"></script>
-<script src="~/Scripts/Helpers/EventManager.js"></script>
-<script src="~/Scripts/Helpers/NoteManager.js"></script>
+<script src="~/Scripts/JSUtils/EventColorHelper.js"></script>
+<script src="~/Scripts/JSUtils/TreeBuilder.js"></script>
+<script src="~/Scripts/JSUtils/WebApiCaller.js"></script>
+<script src="~/Scripts/JSManagers/EventManager.js"></script>
+<script src="~/Scripts/JSManagers/NoteManager.js"></script>
 
 <script src="~/Scripts/Program.js"></script>
 
@@ -95,7 +94,7 @@
 
 	$(function () { 
 		//////////////////////////
-		//Start of program
+		//Start of application
 		//////////////////////////
 		var indexViewModel = @Html.Raw( Json.Encode( @Model.IndexViewModel ) );
 		var userName = '@User.Identity.Name';
