--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_LobbyAllSelectedEventsList.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_LobbyAllSelectedEventsList.cshtml
@@ -1,19 +1,18 @@
-﻿<div id="lobbyPageAllEventsListContainer" class="display-events-overview-container">
+﻿<div id="lobbyPageAllEventsListContainer" class="display-events-overview-container" data-bind="visible: $root.lobbyPagePublicEventListMenu.isOpen()">
 	<header class="display-events-overview-header">
-		<span>Publiczne wydarzenia
-		</span>
+		<span class="display-events-header-menu-title selected hover-cursor-pointer">Publiczne wydarzenia</span>
 		<div class="close-btn-x hover-cursor-pointer" data-bind="click: $root.closeAllSelectedEventsListContainerOnClick">x</div>
 	</header>
 	<div class="display-events-overview-body">
 		<div style="padding: 10px;">
-			<div class="hover-cursor-pointer" style="color: rgb(147, 139, 114); width: 240px;" data-bind="click: function () { $root.toggleShowOldEventsOnCheckboxClick( $element, $root.lobbyPageSelectedEvents ) }">
+			<div class="hover-cursor-pointer" style="color: rgb(147, 139, 114); width: 240px;" data-bind="click: function () { $root.toggleShowOldEventsOnCheckboxClick( $element, $root.lobbyPagePublicEventListMenu.menuItems.publicEvents.selectedEvents ) }">
 				<div class="show-old-events-checkbox">
-					<span data-bind="visible: $root.lobbyPageSelectedEvents.settings.showOldEvents">✓</span>
+					<span data-bind="visible: $root.lobbyPagePublicEventListMenu.menuItems.publicEvents.selectedEvents.settings.showOldEvents">✓</span>
 				</div>
-				<span style="padding: 4px;">Pokaż stare wpisy</span>
+				<span style="padding: 4px;">Pokaż stare wydarzenia</span>
 			</div>
 		</div>
-		<div data-bind="foreach: $root.lobbyPageSelectedEvents.old" style="padding-left: 100px;">
+		<div data-bind="foreach: $root.lobbyPagePublicEventListMenu.menuItems.publicEvents.selectedEvents.old" style="padding-left: 100px;">
 			<!-- ko if: $index() == 0 -->
 			<div class="legend-oldorupcoming">
 				stare:
@@ -37,7 +36,7 @@
 				</div>
 			</div>
 		</div>
-		<div data-bind="foreach: $root.lobbyPageSelectedEvents.upcoming" style="padding-left: 100px;">
+		<div data-bind="foreach: $root.lobbyPagePublicEventListMenu.menuItems.publicEvents.selectedEvents.upcoming" style="padding-left: 100px;">
 			<!-- ko if: $index() == 0 -->
 			<div class="legend-oldorupcoming">
 				nadchodzące:
