--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_LobbyEventsMenuItems.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_LobbyEventsMenuItems.cshtml
@@ -2,8 +2,12 @@
 	<div style="text-align: left;">
 		<div id="addPublicEventBtn" class="add-btn hover-cursor-pointer" data-bind="click: function ( data, e ) { $root.showAddPublicEventPopupOnClick( $element, data, e ) }">Stwórz publiczne wydarzenie +</div>
 	</div>
+
 	<div class="events-menu-container">
-		<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element, $root.lobbyPageSelectedEvents ) }">
+		<div style="text-align:center;">
+			Nadchodzące wydarzenia
+		</div>
+		<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element, $root.lobbyPagePublicEventListMenu.menuItems.publicEvents.selectedEvents ) }">
 			<div class="border-item inne-border-tab"></div>
 			<div class="menu-item" data-eventkind="7">
 				<span>Inne</span>
@@ -13,7 +17,7 @@
 			</div>
 		</div>
 
-		<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element, $root.lobbyPageSelectedEvents ) }">
+		<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element, $root.lobbyPagePublicEventListMenu.menuItems.publicEvents.selectedEvents ) }">
 			<div class="border-item lekcje-border-tab"></div>
 			<div class="menu-item" data-eventkind="2">
 				<span>Lekcje</span>
@@ -25,7 +29,7 @@
 		</div>
 
 
-		<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element, $root.lobbyPageSelectedEvents ) }">
+		<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element, $root.lobbyPagePublicEventListMenu.menuItems.publicEvents.selectedEvents ) }">
 			<div class="border-item wydarzenia-border-tab"></div>
 			<div class="menu-item" data-eventkind="1">
 				<span>Wydarzenia</span>
@@ -35,7 +39,7 @@
 			</div>
 		</div>
 
-		<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element, $root.lobbyPageSelectedEvents ) }">
+		<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element, $root.lobbyPagePublicEventListMenu.menuItems.publicEvents.selectedEvents ) }">
 			<div class="border-item spotkania-border-tab"></div>
 			<div class="menu-item" data-eventkind="6">
 				<span>Spotkania</span>
@@ -46,7 +50,7 @@
 			</div>
 		</div>
 
-		<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element, $root.lobbyPageSelectedEvents ) }">
+		<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element, $root.lobbyPagePublicEventListMenu.menuItems.publicEvents.selectedEvents ) }">
 			<div class="border-item zajecia-border-tab"></div>
 			<div class="menu-item" data-eventkind="3">
 				<span>Zajęcia</span>
@@ -56,7 +60,7 @@
 			</div>
 		</div>
 
-		<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element, $root.lobbyPageSelectedEvents ) }">
+		<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element, $root.lobbyPagePublicEventListMenu.menuItems.publicEvents.selectedEvents ) }">
 			<div class="border-item szkolenia-border-tab"></div>
 			<div class="menu-item" data-eventkind="4">
 				<span>Szkolenia</span>
@@ -67,7 +71,7 @@
 			</div>
 		</div>
 
-		<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element, $root.lobbyPageSelectedEvents ) }">
+		<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element, $root.lobbyPagePublicEventListMenu.menuItems.publicEvents.selectedEvents ) }">
 			<div class="border-item kursy-border-tab"></div>
 			<div class="menu-item" data-eventkind="5">
 				<span>Kursy</span>
