--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_LobbyEventInfo.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_LobbyEventInfo.cshtml
@@ -9,7 +9,7 @@
 			<span data-bind="text: startDate.formatZero( startDate.endHour )"></span><span>:</span><span data-bind="	text: startDate.formatZero( startDate.endMinute )"></span>
 		</div>
 		<div class="date-label">
-			<span data-bind="text: startDate.displayFullDate()"></span>
+			<span style="font-size:1.8em;" data-bind="text: startDate.displayFullDate()"></span>
 		</div>
 		<div class="address-label" data-bind="if: ( address.city != '' && address.city != null )">
 			<div data-bind="text: address.street"></div>
