--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_DetailsAllSelectedEventsList.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_DetailsAllSelectedEventsList.cshtml
@@ -6,21 +6,11 @@
 	</header>
 
 	<div class="display-events-overview-body" data-bind="visible: $root.detailsPageJournalMenu.selectedMenuItem() == 1">
-		<div style="padding: 10px;">
-			<div class="hover-cursor-pointer" style="color: rgb(147, 139, 114); width: 240px;" data-bind="click: function () { $root.toggleShowOldEventsOnCheckboxClick( $element, $root.detailsPageJournalMenu.menuItems.myCalendar.selectedEvents ) }">
-				<div class="show-old-events-checkbox">
-					<span data-bind="visible: $root.detailsPageJournalMenu.menuItems.myCalendar.selectedEvents.settings.showOldEvents">✓</span>
-				</div>
-				<span style="padding: 4px;">Pokaż stare wydarzenia</span>
-			</div>
+		<div class="legend-oldorupcoming" style="margin-left: 100px;" data-bind="$root.toggleSelectedEventsVisibilityOnClick()">
+			<span style="color: #99B799;">+</span>
+			<span>stare</span>
 		</div>
-		<div data-bind="foreach: $root.detailsPageJournalMenu.menuItems.myCalendar.selectedEvents.old" style="padding-left: 100px;">
-			<!-- ko if: $index() == 0 -->
-			<div class="legend-oldorupcoming">
-				stare
-			</div>
-			<!-- /ko -->
-
+		<div data-bind="visible:$root.detailsPageJournalMenu.menuItems.myCalendar.showOld(), foreach: $root.detailsPageJournalMenu.menuItems.myCalendar.selectedEvents.old" style="padding-left: 100px;">
 			<div class="display-events-overview-item">
 				<div data-bind="click: function () { $root.expandEventOverviewItemOnClick( $element ) }">
 					<div class="list-item-star" data-bind="if: privacyLevel.value === $root.eventPrivacyLevels['public']">
@@ -38,13 +28,11 @@
 				</div>
 			</div>
 		</div>
-		<div data-bind="foreach: $root.detailsPageJournalMenu.menuItems.myCalendar.selectedEvents.upcoming" style="padding-left: 100px;">
-			<!-- ko if: $index() == 0 -->
-			<div class="legend-oldorupcoming">
-				nadchodzące
-			</div>
-			<!-- /ko -->
-
+		<div class="legend-oldorupcoming" style="margin-left: 100px;">
+			<span style="color: #99B799;">-</span>
+			<span>nadchodzące</span>
+		</div>
+		<div data-bind="visible: $root.detailsPageJournalMenu.menuItems.myCalendar.showUpcoming(), foreach: $root.detailsPageJournalMenu.menuItems.myCalendar.selectedEvents.upcoming" style="padding-left: 100px;">
 			<div class="display-events-overview-item">
 				<div data-bind="click: function () { $root.expandEventOverviewItemOnClick( $element ) }">
 					<div class="list-item-star" data-bind="if: privacyLevel.value === $root.eventPrivacyLevels['public']">
@@ -65,12 +53,7 @@
 	</div>
 	<div class="display-events-overview-body" data-bind="visible: $root.detailsPageJournalMenu.selectedMenuItem() == 2">
 		<div style="padding: 10px;">
-			<div class="hover-cursor-pointer" style="color: rgb(147, 139, 114); width: 240px;" data-bind="click: function () { $root.toggleShowOldEventsOnCheckboxClick( $element, $root.detailsPageJournalMenu.menuItems.myCalendar.selectedEvents ) }">
-				<div class="show-old-events-checkbox">
-					<span data-bind="visible: $root.detailsPageJournalMenu.menuItems.myCalendar.selectedEvents.settings.showOldEvents">✓</span>
-				</div>
-				<span style="padding: 4px;">Pokaż stare wydarzenia</span>
-			</div>
+			
 		</div>
 		<div data-bind="foreach: $root.detailsPageJournalMenu.menuItems.managePublicEvents.selectedEvents.old" style="padding-left: 100px;">
 			<!-- ko if: $index() == 0 -->
