--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_Details.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_Details.cshtml
@@ -107,7 +107,7 @@
 		@Html.Partial( "_DetailsAllSelectedEventsList" )
 
 		<div class="dziennik-menu-container">
-			<div class="manage-pubic-events-menu-link hover-cursor-pointer" data-bind="click: function () { $root.showSelectedJournalMenuItem( 2 ) }">
+			<div class="manage-pubic-events-menu-link hover-cursor-pointer" data-bind="click: function () { $root.showSelectedJournalMenuItem( $element, 2 ) }">
 				Zarządzaj swoimi publicznymi wydarzeniami
 			</div>
 		</div>
