--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_Details.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_Details.cshtml
@@ -1,9 +1,7 @@
 ﻿@model KalendarzKarieryData.Models.ViewModels.RegisterViewModel
-<div style="height: 20px; background: #EDE9D9;">
-</div>
+<div style="height: 20px; background: #EDE9D9;"></div>
 <div class="title-header">
-	<span>Dziennik
-	</span>
+	<span>Dziennik</span>
 </div>
 <section id="detailsPanel">
 	<div style="width: 90%;">
